--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -12,7 +12,7 @@
         <ion-label position="stacked">Senha</ion-label>
         <ion-input type="password"></ion-input>
       </ion-item>
-      <ion-button expand="block" fill="solid">Entrar</ion-button>
+      <ion-button expand="block" fill="solid" (click)="login()">Entrar</ion-button>
     </form>
     <ion-button expand="block" fill="outline">Registar</ion-button>
   </div>
